TypeScript Internal Modules

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
-  <script type="text/javascript" src="scripts/module.js"></script>
+    <script type="text/javascript" src="scripts/dataservice.js"></script>
+    <script type="text/javascript" src="scripts/alerter.js"></script>
+    <script type="text/javascript" src="scripts/bootstrapper.js"></script>
   </head>
   <body>
     <h1>Welcome</h1>
