--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script type="text/javascript" src="scripts/dataservice.js"></script>
     <script type="text/javascript" src="scripts/alerter.js"></script>
     <script type="text/javascript" src="scripts/bootstrapper.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body>
     <h1>Welcome</h1>
