TypeScript import and export with AMD

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
-    <script type="text/javascript" src="scripts/dataservice.js"></script>
+    <script data-main="scripts/main" src="node_modules/requirejs/require.js"></script>
+    <!--<script type="text/javascript" src="scripts/dataservice.js"></script>
     <script type="text/javascript" src="scripts/alerter.js"></script>
     <script type="text/javascript" src="scripts/bootstrapper.js"></script>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>-->
   </head>
   <body>
     <h1>Welcome</h1>
